Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/090_expected_2_given3_joker.xi
f(): int, int, int

g()
{
    x:int, _ = f()
}
//@PRACOWNIA
//@should_not_typecheck
